@@ -9,6 +9,8 @@ Version TBC:
  * Add light icons for use with dark themes to bitmap visualisation and
    histogram views (#262).
 
+ * Add search history to text search dialog (#260).
+
 Version 0.63.2 (2025-07-13):
 
  * Add missing file required for binary template support.
